WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163666
feFlood with alpha color doesn't work correctly
https://bugs.webkit.org/show_bug.cgi?id=163666
Summary
feFlood with alpha color doesn't work correctly
Simon Fraser (smfr)
Reported
2016-10-19 09:41:01 PDT
Created
attachment 292074
[details]
Testcase Shadow shows black in WebKit, but 50% gray in Chrome and Firefox.
Attachments
Testcase
(746 bytes, text/html)
2016-10-19 09:41 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(6.50 KB, patch)
2018-11-10 12:03 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.38 MB, application/zip)
2018-11-10 13:05 PST
,
EWS Watchlist
no flags
Details
Patch
(6.71 KB, patch)
2018-11-10 13:36 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-11-10 12:03:13 PST
Created
attachment 354469
[details]
Patch
EWS Watchlist
Comment 2
2018-11-10 13:05:17 PST
Comment hidden (obsolete)
Comment on
attachment 354469
[details]
Patch
Attachment 354469
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9941445
New failing tests: imported/mozilla/svg/filters/feComposite-2.svg imported/mozilla/svg/filters/feFlood-2.svg imported/mozilla/svg/filters/feFlood-1.svg imported/mozilla/svg/dynamic-filter-contents-01a.svg
EWS Watchlist
Comment 3
2018-11-10 13:05:18 PST
Comment hidden (obsolete)
Created
attachment 354472
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
Simon Fraser (smfr)
Comment 4
2018-11-10 13:36:05 PST
Created
attachment 354474
[details]
Patch
WebKit Commit Bot
Comment 5
2018-11-12 09:59:03 PST
Comment on
attachment 354474
[details]
Patch Clearing flags on attachment: 354474 Committed
r238094
: <
https://trac.webkit.org/changeset/238094
>
WebKit Commit Bot
Comment 6
2018-11-12 09:59:05 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-12 10:01:17 PST
<
rdar://problem/45993157
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug