feFlood with alpha color doesn't work correctly https://bugs.webkit.org/show_bug.cgi?id=163666

Reviewed by Zalan Bujtas.
Source/WebCore:

FEFlood::platformApplySoftware() erroneously used colorWithOverrideAlpha()
rather than multiplying the flood color with the flood opacity as other browsers do.

Test: svg/filters/feFlood-with-alpha-color.html

* platform/graphics/Color.cpp:
(WebCore::Color::colorWithAlpha const): I tried using colorWithAlphaMultipliedBy() elsewhere,
and it triggered a behavior change, so add a comment.
* platform/graphics/filters/FEFlood.cpp:
(WebCore::FEFlood::platformApplySoftware):
* svg/SVGStopElement.cpp:
(WebCore::SVGStopElement::stopColorIncludingOpacity const):

LayoutTests:

* svg/filters/feFlood-with-alpha-color-expected.html: Added.
* svg/filters/feFlood-with-alpha-color.html: Added.


Canonical link: https://commits.webkit.org/206306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238094 268f45cc-cd09-0410-ab3c-d52691b4dbfc