Source/WebCore/platform/graphics/filters/FEFlood.cpp
@@ -63,7 +63,9 @@ void FEFlood::platformApplySoftware()
     if (!resultImage)
         return;
 
-    const Color& color = colorWithOverrideAlpha(floodColor().rgb(), floodOpacity());
+    // FIXME: This should use colorWithAlphaMultipliedBy() but that has different rounding of the alpha component that breaks some tests.
+    float colorAlpha = floodColor().alpha() / 255.0;
+    auto color = colorWithOverrideAlpha(floodColor().rgb(), colorAlpha * floodOpacity());
     resultImage->context().fillRect(FloatRect(FloatPoint(), absolutePaintRect().size()), color);
 }
 
